cabal-version:      3.0
name:               weighted-list
version:            0.1.0.0
homepage:           https://github.com/Sup2point0/weighted-list/tree/main/haskell
license:            MIT
author:             Sup#2.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  WeightedList
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   source
    default-language: Haskell2010

test-suite weighted-list-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          tests.hs
    build-depends:
        base ^>=4.18.3.0,
        weighted-list
