cabal-version:      3.0
name:               weighted-list
version:            0.1.0.0
homepage:           https://github.com/Sup2point0/weighted-list/tree/main/haskell
license:            MIT
author:             Sup#2.0
build-type:         Simple

library
    exposed-modules:  WeightedList
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   source
    default-language: GHC2021

test-suite weighted-list-test
    default-language: GHC2021
    other-modules:    Syntax, Test_WeightedList
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          tests.hs
    build-depends:
        base ^>=4.18.3.0,
        weighted-list,
        tasty,
        tasty-hunit >=0.9,
        tasty-expected-failure >=0.12
