cabal-version:      3.0
name:               weighted-list
version:            0.1.0.0
homepage:           https://github.com/Sup2point0/weighted-list/tree/main/haskell
license:            MIT
author:             Sup#2.0
build-type:         Simple

library
    exposed-modules:  WeightedList
    default-language: GHC2021
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.3.0

test-suite weighted-list-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    other-modules:    Test.Syntax, Test.WeightedList
    hs-source-dirs:   tests
    main-is:          Test/tests.hs
    build-depends:
        base ^>=4.18.3.0,
        weighted-list,
        tasty,
        tasty-hunit >=0.9,
        tasty-expected-failure >=0.12

benchmark weighted-list-bench
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests/Bench
    main-is:          bench.hs
    build-depends:
        base ^>=4.18.3.0,
        weighted-list,
        tasty,
        tasty-bench,
        deepseq
