[package]
name = "weighted-list"
version = "0.2.0"
authors = ["Sup#2.0"]
edition = "2024"

description = "A list class for weighted randomisation"
repository = "https://github.com/Sup2point0/weighted-list/tree/main/rust"
readme = "README.md"
documentation = "https://docs.rs/weighted-list/latest/weighted_list/"
license = "MIT"

exclude = [
  ".dev.md"
]

[dependencies]
num-traits = "0.2.19"
rand = "0.9"
itertools = "0.14.0"
bon = "3.8.1"

[dev-dependencies]
statrs = "0.18.0"
